<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">Diary</string>
    <string name="add_button">Add Event</string>


    <!-- Edit event dialog -->
    <string name="select_date">Date</string>
    <string name="select_time">Time</string>
    <string name="set">Set</string>
    <string name="event_data">Event information</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <string name="event_type">Event Type</string>
    <string name="title_activity_add_event">AddEvent</string>
    <string name="confirm">Add</string>

</resources>
